Incorporating review comments